[tool.poetry]
name = "repl_python3_DishonestWealthyCones"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.5"
kakaotrans = "^0.1.2"
google-auth-oauthlib = "^0.4.6"
twilio = "^7.5.0"
google-api-python-client = "^2.36.0"
cryptography = "^36.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
